# Game-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  compile_run.sh
include/Engine/Core/: ClockManager.hpp  EngineClock.hpp  Window.hpp
include/Engine/Debug/: DebugManager.hpp
include/Engine/Rendering/: RenderManager.hpp
src/Engine/Core/: ClockManager.cpp  EngineClock.cpp  Window.cpp
src/Engine/Debug/: DebugManager.cpp
src/Engine/Rendering/: RenderManager.cpp
src/Game/: main.cpp
